Adicionado ao functions, e mudei o header

--- a/css/modules/_form.scss
+++ b/css/modules/_form.scss
@@ -28,7 +28,7 @@
 	display: block;
 	@include type-1(18);
 	border: 0px solid;
-	border-left: 5px solid $blue;
+	border-left: 5px solid #444;
 	background: #333;
 	width: 250px;
 	padding: 13px 0 0 0;
