--- a/css/boilerplate/_grid.scss
+++ b/css/boilerplate/_grid.scss
@@ -1,195 +1,51 @@
-/*
-* Origamid-Grid V1.0
-*	
-* Based off of Skeleton-SASS V1.1
-* https://github.com/lazerwalker/Skeleton-Sass
-*
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-*/
+// Grid breakpoints
+//
+// Define the minimum and maximum dimensions at which your layout will change,
+// adapting to different screen sizes, for use in media queries.
 
-/* #Variable Definitions
-================================================== */
-$base-width: 960px;
-$tablet-width: 768px;
-$mobile-width: 300px;
+$grid-breakpoints: (
+  // Extra small screen / phone
+  xs: 0,
+  // Small screen / phone
+  sm: 544px,
+  // Medium screen / tablet
+  md: 768px,
+  // Large screen / desktop
+  lg: 992px,
+  // Extra large screen / wide desktop
+  xl: 1200px
+) !default;
 
-$num-cols: 16;
-$margin: 10px;
 
-/* Grid
-================================================== */
-@function skeleton-third-width($num: 1, $width: $base-width) {
-	@return $num * ($width / 3) - (2 * $margin);
-}
+// Grid containers
+//
+// Define the maximum width of `.container` for different screen sizes.
 
-@function skeleton-col-width($num: 1, $width: $base-width) {
-	@return ($num * ($width / $num-cols)) - (2 * $margin);
-}
+$container-max-widths: (
+  sm: 576px,
+  md: 720px,
+  lg: 940px,
+  xl: 1140px
+) !default;
 
-@mixin container {
-	position: relative;
-	margin: 0 auto;
-	padding: 0;
-	width: $base-width;
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
 
-	&:after {
-	content: "\0020";
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
-	}
+$grid-columns:               12 !default;
+$grid-gutter-width:          1.875rem !default; // 30px
 
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		width: $tablet-width;
-	}
+// Clearfix
 
-	@media only screen and (max-width: 767px) {
-		width: $mobile-width;
-	}
-}
-
-@mixin col {
-	float: left;
-	display: inline;
-	margin-left: $margin;
-	margin-right: $margin;
-	
-	@media only screen and (max-width: 767px) {
-		margin-right: 0px;
-		margin-left: 0px;
-	}
-}
-
-@mixin row {
-	@include clearfix;
-	margin-bottom: 2 * $margin;
-}
-
-@mixin alpha {
-	margin-left: 0;
-}
-@mixin omega {
-	margin-right: 0;
-}
-
-@mixin grid-pure($num: 1) {
-	width: skeleton-col-width($num, $base-width);
-
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		width: skeleton-col-width($num, $tablet-width);
-	}
-
-	@media only screen and (max-width: 767px) {
-		width: $mobile-width;
-	}
-}
-
-@mixin grid-pure-plus($num: 1) {
-	width: skeleton-col-width($num, $base-width) + 20px;
-
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		width: skeleton-col-width($num, $tablet-width) + 20px;
-	}
-
-	@media only screen and (max-width: 767px) {
-		width: $mobile-width;
-	}
-}
-
-// When is a grid inside a grid, use inside on the first element as left
-// and on the second element as right
-@mixin grid($num: 1, $inside: none) {
-	@if $inside == left {
-		float: left;
-		display: inline;
-		margin-right: 10px;
-		margin-left: 0px;
-		@media only screen and (max-width: 767px) {
-			margin-right: 0px;
-			margin-left: 0px;
-		}
-	}
-	@if $inside == right {
-		float: left;
-		display: inline;
-		margin-right: 0px;
-		margin-left: 10px;
-		@media only screen and (max-width: 767px) {
-			margin-right: 0px;
-			margin-left: 0px;
-		}
-	}
-	@else if $inside == none {
-		@include col;
-	}
-	width: skeleton-col-width($num, $base-width);
-
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		width: skeleton-col-width($num, $tablet-width);
-	}
-
-	@media only screen and (max-width: 767px) {
-		width: $mobile-width;
-	}
-}
-
-@mixin grid-third($num: 1) {
-	@include col;
-	width: skeleton-third-width($num, $base-width);
-
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		width: skeleton-third-width($num, $tablet-width);
-	}
-	
-	@media only screen and (max-width: 767px) {
-		width: $mobile-width;
-	}
-}
-
-@mixin offset($num: 1) {
-	$offset: 2 * $margin;
-	padding-left: skeleton-col-width($num, $base-width) + $offset;
-	
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		padding-left: skeleton-col-width($num, $tablet-width) + $offset;
-	}
-	
-	@media only screen and (max-width: 767px) {
-		padding-left: 0;
-	}
+@mixin clearfix() {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 
-/* #Clearing
-================================================== */
-/* Include clearfix on parent to clear nested cols,
-or wrap each row of cols in a @include row */
-@mixin clearfix {
-	zoom: 1;
-	&:after {
-		clear: both;
-	}
-	&:before, &:after {
-		content: '\0020';
-		display: block;
-		overflow: hidden;
-		visibility: hidden;
-		width: 0;
-		height: 0;
-	}
-}
-
-/* You can also use a @include clear to clear cols */
-@mixin clear {
-	clear: both;
-	display: block;
-	overflow: hidden;
-	visibility: hidden;
-	width: 0;
-	height: 0;
-}
 
 /* #GRID POINTER
 s = Screen = 960px
